--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 34.8 s, sys: 26.6 ms, total: 34.8 s\n",
-      "Wall time: 34.8 s\n"
+      "CPU times: user 271 ms, sys: 0 ns, total: 271 ms\n",
+      "Wall time: 268 ms\n"
      ]
     }
    ],
